--- a/src/components/Simulator/simulator/Simulator.css
+++ b/src/components/Simulator/simulator/Simulator.css
@@ -66,65 +66,6 @@
   resize: none;
 }
 
-
-/* .storage {
-  display: grid;
-  grid-template-columns: repeat(2, 120px);
+.console-error {
+  color: var(--red);
 }
-
-.stor-tab {
-  background-color: var(--darkBgColor);
-  text-align: center;
-  color: var(--fontColor);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-} */
-
-/* .memory {
-  margin-top: 50px;
-}
-
-.scroll-table::-webkit-scrollbar {
-  width: 5px;
-}
-
-.scroll-table::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-
-.scroll-table::-webkit-scrollbar-thumb {
-  background: var(--fontColor);
-  border-radius: 10px;
-}
-
-.storage-tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-}
-
-.storage-tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
-
-.storage-tab button:hover {
-  background-color: #ddd;
-}
-
-.storage-tab button.active {
-  background-color: #ccc;
-}
-
-.storage-tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-} */
