--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-/*.App {
-  display: flex;
+.app-wrapper {
+  display: grid;
+  /* grid-template-columns: 13% 87%; */
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 13% 7.5% 79.5%;
+  width: 100vw;
+  height: 100vh;
 }
-.App .container{
-  flex-grow: 1;
-  padding: 16px 45px 0px 45px;
-}*/
