--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,11 @@
   --lightBgColor: #555;
   --darkBgColor: hsl(225, 6%, 13%);
   --secondDarkBgColor: #777;
+
   --yellow: #FFCB6B;
   --red: #FF5370;
-  --green: #C3E88D
+  --green: #C3E88D;
+  --purple: #c792ea;
 }
 
 html {
@@ -71,4 +73,21 @@ body {
   border-radius: 4px;
   padding: 8px;
   margin: 10px 0;
+}
+
+
+::-webkit-scrollbar {
+  height: 5px;
+  /* height of horizontal scrollbar ← You're missing this */
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--fontColor);
+  border-radius: 10px;
 }
